--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,3 +1,3 @@
-<h1><%= "Code Now | #{title}"  %></h1>
+<h1><%= link_to 'Code Now', lessons_path  %> <%=" | #{title}"%></h1>
 <%= flash[:alert] %>
 <%= flash[:notice] %>
