--- a/app/views/lessons/show.html.erb
+++ b/app/views/lessons/show.html.erb
@@ -2,4 +2,6 @@
 <p><%= @lesson.content %></p>
 <%= link_to 'Edit', edit_lesson_path(@lesson) %>
 <%= spacer %>
-<%= link_to 'Delete', lesson_path(@lesson, method: :delete) %>
+<%= link_to 'Delete', lesson_path(@lesson),
+                      data: {confirm: "Are you sure?",
+                             method: :delete}  %>
