--- a/app/views/lessons/index.html.erb
+++ b/app/views/lessons/index.html.erb
@@ -1,4 +1,19 @@
-<%= render('shared/header', title: 'Lessons') %>
+<%= render('shared/header', title: 'Courses and Lessons') %>
+
+<ul class="row">
+  <% @courses.each do |course| %>
+    <li class = col-md-3><%= course.name %></li>
+    <ul>
+      <% if course.lessons.any?  %>
+        <% course.lessons.each do |lesson| %>
+          <li> <%= link_to lesson.title, lesson_path(lesson) %> </li>
+        <% end %>
+      <% end %>
+    </ul>
+  <% end %>
+</ul>
+
+ <hr>
 
 <% @lessons.each do |lesson| %>
   <p>
@@ -7,3 +22,4 @@
 <% end %>
 
 <%= link_to 'Create a New Lesson', new_lesson_path %>
+<%= link_to 'Create a New Course', new_course_path %>
